Categorical Data Graph

--- a/Teacher_Salary.ipynb
+++ b/Teacher_Salary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "max     2391.000000     41.000000  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "      <td>1.0</td>\n",
        "      <td>1001</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Atlantic</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -299,7 +299,7 @@
        "      <td>5.0</td>\n",
        "      <td>1001</td>\n",
        "      <td>Masters</td>\n",
-       "      <td>Atlantic</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -311,7 +311,7 @@
        "      <td>5.0</td>\n",
        "      <td>1001</td>\n",
        "      <td>Bachelors</td>\n",
-       "      <td>Atlantic</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -323,7 +323,7 @@
        "      <td>5.0</td>\n",
        "      <td>1001</td>\n",
        "      <td>Doctoral</td>\n",
-       "      <td>Atlantic</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -335,7 +335,7 @@
        "      <td>5.0</td>\n",
        "      <td>1106</td>\n",
        "      <td>Bachelors</td>\n",
-       "      <td>Atlantic</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -349,15 +349,15 @@
        "3          14         90308.0          19.0     Horner          1   \n",
        "4          15         67401.0          12.0  Broomhead          1   \n",
        "\n",
-       "   CLASSES_TAUGHT  JOBCODE1 HIGHESTCOMPLETED COUNTY_CODE  \n",
-       "0             1.0      1001              NaN    Atlantic  \n",
-       "1             5.0      1001          Masters    Atlantic  \n",
-       "2             5.0      1001        Bachelors    Atlantic  \n",
-       "3             5.0      1001         Doctoral    Atlantic  \n",
-       "4             5.0      1106        Bachelors    Atlantic  "
+       "   CLASSES_TAUGHT  JOBCODE1 HIGHESTCOMPLETED  COUNTY_CODE  \n",
+       "0             1.0      1001              NaN            1  \n",
+       "1             5.0      1001          Masters            1  \n",
+       "2             5.0      1001        Bachelors            1  \n",
+       "3             5.0      1001         Doctoral            1  \n",
+       "4             5.0      1106        Bachelors            1  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,10 +368,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The dataset only stores COUNTY_CODE, this dictionary will be useful to plot categorical Data\n",
     "countyNameCode = {\n",
     "    1: 'Atlantic',\n",
     "    3: 'Bergen',\n",
@@ -399,23 +400,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\abastola\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages\\ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "c:\\users\\abastola\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+      "  after removing the cwd from sys.path.\n",
+      "c:\\users\\abastola\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages\\pandas\\core\\indexing.py:205: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_with_indexer(indexer, value)\n"
      ]
     }
    ],
    "source": [
     "count = 0\n",
+    "# Change COUNTY_CODE TO COUNTY_NAME using the above dictionary\n",
     "for code in df['COUNTY_CODE']:\n",
     "    df['COUNTY_CODE'][count] = countyNameCode[code]\n",
     "    count = count + 1"
@@ -423,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +445,7 @@
        " <a list of 25 Patch objects>)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -462,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +488,7 @@
    "source": [
     "plt.figure(figsize=(25,15))\n",
     "\n",
-    "\n",
+    "# Scatter Plot for Salaries\n",
     "plt.scatter(df['COUNTY_CODE'], df['TEACHER_SALARY'], s=15, alpha=0.5)\n",
     "plt.xlabel(\"County Name\")\n",
     "plt.ylabel(\"Teacher Salary\")\n",
@@ -490,10 +497,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Stores county_name as key, and list of salries as value\n",
     "salaryCounty = dict()\n",
     "for i in range(len(df)):\n",
     "    if df['COUNTY_CODE'][i] in salaryCounty:\n",
@@ -505,17 +513,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# change the value(list of salaries) to average salary\n",
+    "\n",
     "for key, value in salaryCounty.items():\n",
     "    salaryCounty[key] = sum(value) / len(value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -532,26 +542,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the list of counties and their avgSalries\n",
     "county = list(salaryCounty.keys())\n",
     "avgSalary = list(salaryCounty.values())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x328c3ed0>]"
+       "[<matplotlib.lines.Line2D at 0xf002230>]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
