--- a/Teacher_Salary.ipynb
+++ b/Teacher_Salary.ipynb
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,6 +509,39 @@
     "    else:\n",
     "        salaryCounty[df['COUNTY_CODE'][i]] = [df['TEACHER_SALARY'][i]]\n",
     "#     print(df['TEACHER_SALARY'][i], df['COUNTY_CODE'][i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-40-acb082d4a58f>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-40-acb082d4a58f>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    indexNan = [ i for i in range(len(value)) if math.isnan(value[i]) else sum = sum + value[i]]\u001b[0m\n\u001b[1;37m                                                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in salaryCounty.items():\n",
+    "    sum = 0\n",
+    "    indexNan = [ i for i in range(len(value)) if math.isnan(value[i]) else sum = sum + value[i]]\n",
+    "    print(indexNan)\n",
+    "#     print(key, sum(value))\n",
+    "    print()\n",
+    "    print()"
    ]
   },
   {
@@ -542,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,13 +586,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Atlantic --> 72677.09027373325\n",
+      "Bergen --> 77958.74184397163\n",
+      "Burlington --> 73142.60783487784\n",
+      "Camden --> 70417.06629578117\n",
+      "Cape May --> 73035.17710583154\n",
+      "Cumberland --> 67919.32384341636\n",
+      "Essex --> nan\n",
+      "Gloucester --> 67830.98056801196\n",
+      "Hudson --> 77518.78422190202\n",
+      "Hunterdon --> 68856.4289897511\n",
+      "Mercer --> 73952.41064198958\n",
+      "Middlesex --> nan\n",
+      "Monmouth --> 72504.99337947638\n",
+      "Morris --> 72415.95485969906\n",
+      "Ocean --> 66243.52531945102\n",
+      "Passaic --> 74183.19149908592\n",
+      "Salem --> 63487.943396226416\n",
+      "Somerset --> 72656.63450292397\n",
+      "Sussex --> 75557.29733520337\n",
+      "Union --> 74690.63351955307\n",
+      "Warren --> 70066.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(county)):\n",
+    "    print(county[i] + \" --> \" + str(avgSalary[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0xefe53b0>]"
+       "[<matplotlib.lines.Line2D at 0xdcb3b90>]"
       ]
      },
      "execution_count": 16,
@@ -601,7 +679,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0xe7d55f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0xd4c75f0>"
       ]
      },
      "execution_count": 18,
